fluxcd/apps/overlays/production/penpot/redis-patch.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: penpot-redis
spec:
  template:
    metadata:
      labels:
        policy.prplanit.com/access-class: redis
        policy.prplanit.com/service-scope: temple-of-time.penpot.redis
    spec:
      securityContext:
        runAsUser: 999
        runAsGroup: 999
        fsGroup: 999
        runAsNonRoot: true
        seccompProfile:
          type: RuntimeDefault
      imagePullSecrets:
        - name: docker-io-pull-secret
      containers:
        - name: redis
          image: docker.io/redis:7
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop:
                - ALL
  volumeClaimTemplates:
    - metadata:
        name: temple-of-time-penpot-redis-data
      spec:
        accessModes:
          - ReadWriteOnce
        storageClassName: ceph-rbd
        resources:
          requests:
            storage: 5Gi
