fluxcd/apps/overlays/production/penpot/service-penpot-frontend-ingress-patch.yaml
apiVersion: v1
kind: Service
metadata:
  name: penpot-frontend
  labels:
    policy.prplanit.com/ingress: "true"
