fluxcd/apps/overlays/production/penpot/httproute-cell-membrane.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: penpot-public
  namespace: temple-of-time
  annotations:
    gatus.home-operations.com/endpoint: |
      group: "Content & Media (Temple of Time🏛️)"
spec:
  parentRefs:
    - name: cell-membrane-gateway
      namespace: prelude-of-light
  hostnames:
    - "penpot.prplanit.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: penpot-frontend
          port: 8080
