fluxcd/apps/overlays/production/penpot/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: penpot
  annotations:
    gatus.home-operations.com/endpoint: |
      group: "Content & Media (Temple of Time🏛️)"
spec:
  parentRefs:
    - name: phloem-gateway
      namespace: arylls-lookout
  hostnames:
    - "design.pcfae.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: penpot-frontend
          port: 8080
